# captcha-breaker

./: .gitignore  main.py  pyproject.toml
captcha_breaker/: __init__.py  captcha_breaker.py
captcha_breaker/breakers/: breaker.py  image_captcha.py  recaptcha.py  selenium_recaptcha.py
test/: test_api_breaker.py
